<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.cab.activities.registration.vm.RegistrationActivityViewModel" />
    </data>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/welcome_message"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="15dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="?attr/colorSecondary"
                android:layout_marginTop="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/welcome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameField"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="name"
                    android:lines="1"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/surname_message"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.surname}"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:boxStrokeColor="?attr/colorSecondary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/surnameFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="name"
                    android:lines="1"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/name_message"
                    android:inputType="textCapWords"
                    android:text="@={viewModel.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="?attr/colorSecondary"
                android:layout_marginTop="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/nameFieldLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:autofillHints="phone"
                    android:ems="10"
                    android:lines="1"
                    android:hint="@string/phone_message"
                    android:fontFamily="@font/montserrat"
                    android:inputType="phone"
                    android:maxLength="17"
                    android:text="@={viewModel.phone}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginHorizontal="40dp"
                android:layout_margin="35dp"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"
                app:cornerRadius="50dp"
                app:layout_constraintTop_toBottomOf="@id/phoneFieldLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

